--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <main>
         <section id="login">
             <div id="imagem">
-               foto
+              <!--Aqui vai a Imagem nas Css-->
             </div>
             <div id="formulario">
-                <h1>login</h1>
+                <h1>Login</h1>
             <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente. </p>
              
-            <form action="login.php" method="post"></form>
+            <form action="login.php" method="post "></form>
 
             </div>
 
