--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pr-br">
+<html lang="pt-br"> <!-- Corrigido "pr-br" para "pt-br" -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,31 +12,31 @@
     <main>
         <section id="login">
             <div id="imagem">
-              <!--Aqui vai a Imagem nas Css-->
+              <!--Aqui vai a Imagem nas CSS-->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-            <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente. </p>
-             
-            <form action="login.php" method="post " autocomplete="on">
-                <div class="campo">
-                    <span class="material-symbols-outlined">person</span>
-                 <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
-                 <label for="ilogin">login</label>
-                </div>
-                <div class="campo">
-                    <span class="material-symbols-outlined">key</span>
-                   <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8"
-                   maxlength="20">
-                   <label for="isenha">Senha</label>
-                </div>
-            </form>
-<input type="submit" value="Entrar">
-<a href="esqueci.html">Esqueci a senha  <span class="material-symbols-outlined">mail</span>
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
 
-</a>
+                <form action="login.php" method="post" autocomplete="on"> <!-- Corrigido espaço extra -->
+                    <div class="campo">
+                        <span class="material-symbols-outlined">person</span>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">key</span>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <!-- O botão de submit deve estar dentro do formulário -->
+                    <input type="submit" value="Entrar">
+                    
+                <a href="esqueci.html" class="botao">
+                    Esqueci a senha <span class="material-symbols-outlined">mail</span>
+                     </a>
+                </form> 
             </div>
-
         </section>
     </main>
 </body>
